tests/kyverno-policies/restrict-adding-capabilities/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-skip
  namespace: paas
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-webservice-skip
  namespace: webservice
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-dynamo-skip
  namespace: dynamo
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-dynamo-none
  namespace: dynamo
  labels:
    nvidia.com/dynamo-component-type: worker
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-dynamo-pass
  namespace: dynamo
  labels:
    nvidia.com/dynamo-component-type: worker
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - IPC_LOCK
        - SYS_RESOURCE
---
apiVersion: v1
kind: Pod
metadata:
  name: test-dynamo-fail
  namespace: dynamo
  labels:
    nvidia.com/dynamo-component-type: worker
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - IPC_LOCK
        - SYS_RESOURCE
        - CAP_CHOWN
