tests/kyverno-policies/restrict-adding-capabilities/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-adding-capabilities
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: restrict-adding-capabilities
    rule: allowed-capabilities-dynamo
    resources:
      - paas/test-paas-skip
      - webservice/test-webservice-skip
      - dynamo/test-dynamo-skip
    kind: Pod
    result: skip
  - policy: restrict-adding-capabilities
    rule: allowed-capabilities-dynamo
    resources:
      - dynamo/test-dynamo-none
      - dynamo/test-dynamo-pass
    kind: Pod
    result: pass
  - policy: restrict-adding-capabilities
    rule: allowed-capabilities-dynamo
    resources:
      - dynamo/test-dynamo-fail
    kind: Pod
    result: fail
