tests/kyverno-policies/restrict-adding-capabilities/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
namespaceSelector:
  - name: test
    labels:
      foo: bar
  - name: user-test
    labels:
      foo: bar
  - name: webservice
    labels:
      osc.edu/role: webservice
  - name: dynamo
    labels:
      osc.edu/role: webservice
      osc.edu/access-dynamo-platform: "true"
  - name: paas
    labels:
      osc.edu/role: paas
